// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cue renders 0 1`] = `
Array [
  .c0 {
  cue: 0;
}

<div
    className="c0"
  />,
  .c0 {
  cue: 0;
}

<div
    className="c0"
  />,
  .c0 {
  cue: 0;
}

<div
    className="c0"
  />,
  .c0 {
  cue: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders function 1`] = `
Array [
  .c0 {
  cue: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  cue: has;
}

<div
    className="c0"
  />,
  .c0 {
  cue: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  cue: has;
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders invalid theme path 1`] = `
Array [
  .c0 {
  cue: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  cue: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  cue: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  cue: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders negative number 1`] = `
Array [
  .c0 {
  cue: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  cue: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  cue: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  cue: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  cue: July;
}

@media screen and (min-width:November) {
  .c0 {
    cue: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  cue: July;
}

@media screen and (min-width:November) {
  .c0 {
    cue: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  cue: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    cue: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  cue: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    cue: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    cue: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    cue: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    cue: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    cue: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    cue: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    cue: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  cue: July;
}

@media May {
  .c0 {
    cue: August;
  }
}

@media April {
  .c0 {
    cue: September;
  }
}

@media January {
  .c0 {
    cue: November;
  }
}

@media April {
  .c0 {
    cue: August;
  }
}

@media June {
  .c0 {
    cue: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  cue: July;
}

@media May {
  .c0 {
    cue: August;
  }
}

@media April {
  .c0 {
    cue: September;
  }
}

@media January {
  .c0 {
    cue: November;
  }
}

@media April {
  .c0 {
    cue: August;
  }
}

@media June {
  .c0 {
    cue: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  cue: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    cue: November;
  }
}

@media April {
  .c0 {
    cue: January;
  }
}

@media January {
  .c0 {
    cue: December;
  }
}

@media April {
  .c0 {
    cue: April;
  }
}

@media June {
  .c0 {
    cue: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  cue: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    cue: November;
  }
}

@media April {
  .c0 {
    cue: January;
  }
}

@media January {
  .c0 {
    cue: December;
  }
}

@media April {
  .c0 {
    cue: April;
  }
}

@media June {
  .c0 {
    cue: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    cue: July;
  }
}

@media April {
  .c0 {
    cue: August;
  }
}

@media January {
  .c0 {
    cue: September;
  }
}

@media April {
  .c0 {
    cue: November;
  }
}

@media June {
  .c0 {
    cue: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    cue: July;
  }
}

@media April {
  .c0 {
    cue: August;
  }
}

@media January {
  .c0 {
    cue: September;
  }
}

@media April {
  .c0 {
    cue: November;
  }
}

@media June {
  .c0 {
    cue: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    cue: January;
  }
}

@media April {
  .c0 {
    cue: December;
  }
}

@media January {
  .c0 {
    cue: April;
  }
}

@media April {
  .c0 {
    cue: May;
  }
}

@media June {
  .c0 {
    cue: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    cue: January;
  }
}

@media April {
  .c0 {
    cue: December;
  }
}

@media January {
  .c0 {
    cue: April;
  }
}

@media April {
  .c0 {
    cue: May;
  }
}

@media June {
  .c0 {
    cue: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders postitive number 1`] = `
Array [
  .c0 {
  cue: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  cue: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  cue: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  cue: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders string 1`] = `
Array [
  .c0 {
  cue: July;
}

<div
    className="c0"
  />,
  .c0 {
  cue: July;
}

<div
    className="c0"
  />,
  .c0 {
  cue: June;
}

<div
    className="c0"
  />,
  .c0 {
  cue: June;
}

<div
    className="c0"
  />,
]
`;

exports[`cue renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`cue renders valid theme path 1`] = `
Array [
  .c0 {
  cue: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  cue: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  cue: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  cue: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
